[gd_scene load_steps=12 format=3 uid="uid://bffke2ii4y2jy"]

[ext_resource type="Texture2D" uid="uid://c6k1vjxs6g03b" path="res://icon.svg" id="1_f3sb7"]
[ext_resource type="Script" uid="uid://cmaqymb54am7c" path="res://scripts/world.gd" id="1_fj7yv"]
[ext_resource type="PackedScene" uid="uid://dfvswve5leodr" path="res://scenes/player.tscn" id="2_tlwt5"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ig7tw"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_0xm2m"]
sky_material = SubResource("ProceduralSkyMaterial_ig7tw")

[sub_resource type="Environment" id="Environment_h2yge"]
background_mode = 2
sky = SubResource("Sky_0xm2m")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0xm2m"]
albedo_texture = ExtResource("1_f3sb7")

[sub_resource type="BoxMesh" id="BoxMesh_7dm0k"]
size = Vector3(50, 1, 50)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_ig7tw"]
data = PackedVector3Array(-25, 0.5, 25, 25, 0.5, 25, -25, -0.5, 25, 25, 0.5, 25, 25, -0.5, 25, -25, -0.5, 25, 25, 0.5, -25, -25, 0.5, -25, 25, -0.5, -25, -25, 0.5, -25, -25, -0.5, -25, 25, -0.5, -25, 25, 0.5, 25, 25, 0.5, -25, 25, -0.5, 25, 25, 0.5, -25, 25, -0.5, -25, 25, -0.5, 25, -25, 0.5, -25, -25, 0.5, 25, -25, -0.5, -25, -25, 0.5, 25, -25, -0.5, 25, -25, -0.5, -25, 25, 0.5, 25, -25, 0.5, 25, 25, 0.5, -25, -25, 0.5, 25, -25, 0.5, -25, 25, 0.5, -25, -25, -0.5, 25, 25, -0.5, 25, -25, -0.5, -25, 25, -0.5, 25, 25, -0.5, -25, -25, -0.5, -25)

[sub_resource type="BoxMesh" id="BoxMesh_tlwt5"]
size = Vector3(1, 5, 10)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_tlwt5"]
points = PackedVector3Array(-0.5, -2.5, -5, 0.5, -2.5, -5, -0.5, -2.5, 5, -0.5, 2.5, -5, 0.5, 2.5, -5, 0.5, -2.5, 5, -0.5, 2.5, 5, 0.5, 2.5, 5)

[node name="World" type="Node3D"]
script = ExtResource("1_fj7yv")
player_scene = ExtResource("2_tlwt5")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 16.2037, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_h2yge")

[node name="Plane" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0895181, 0)
material_override = SubResource("StandardMaterial3D_0xm2m")
mesh = SubResource("BoxMesh_7dm0k")

[node name="StaticBody3D" type="StaticBody3D" parent="Plane"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Plane/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_ig7tw")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://dfvswve5leodr")
spawn_path = NodePath("..")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Host" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -15.0
offset_right = 84.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "Host
"

[node name="Join" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = 24.0
offset_right = 88.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
text = "Join"

[node name="SpawnPoints" type="Node3D" parent="."]

[node name="Marker3D" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.21686, 7.03292)

[node name="Marker3D2" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.21686, -2.53409)

[node name="Marker3D3" type="Marker3D" parent="SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.21686, -0.109732)

[node name="Walls" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.415, 2.86462, 0)
mesh = SubResource("BoxMesh_tlwt5")

[node name="StaticBody3D" type="StaticBody3D" parent="Walls/MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls/MeshInstance3D/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_tlwt5")

[connection signal="pressed" from="UI/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="UI/Join" to="." method="_on_join_pressed"]
